syntax = "proto3";

package customer;

service CustomerService{
    rpc Create(CustomerRequest) returns (Customer);
    rpc GetCustomer(CustomerId) returns (Customer);
    rpc GetCustomerList(Empty) returns (CustomerListResponse);
    rpc DeleteCustomer(CustomerId) returns (Empty);
    rpc UpdateCustomer(Customer) returns (Customer);
}

message CustomerRequest{
    string first_name = 2;
    string last_name = 3;
    string bio = 4;
    repeated Address addresses = 5;
    string email = 6;
    string phone_number = 7;
    int64 created_at = 8;
    int64 updated_at = 9;
    int64 deleted_at = 10;
}

message Customer {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string bio = 4;
    repeated Address addresses = 5;
    string email = 6;
    string phone_number = 7;
    string created_at = 8;
    string updated_at = 9;
    string deleted_at = 10;
    repeated Ranking rankings = 11;
    repeated Post posts = 12;
    
}

message Address {
    int64 id = 1;
    string street = 2;
    string district = 3;
}

message CustomerId{
    int64 id = 1;
}

message Empty{}

message CustomerListResponse{
    repeated Customer customers = 1;
}

message Ranking {
    string name=1;
    int64 ranking = 2;
    string description = 3;
    int64 post_id = 4;
    int64 customer_id = 5;

}

message Post{
    int64 id = 1;
    string name = 2;
    string description = 3;
    string created_at = 4;
    string updated_at = 5;
    int64 customer_id = 6;

}