syntax = "proto3";

package reyting;
service RankingService{
    rpc CreateRanking(Ranking) returns(Empty);
    rpc GetRankings(id) returns (Rankings);
    rpc GetRankingsByCustomerId(id) returns (Rankings);
}

message Ranking{
    string name=1;
    int64 ranking = 2;
    string description = 3;
    int64 post_id = 4;
    int64 customer_id = 5;

}
message Rankings {
    repeated Ranking rankings = 1;
}
message id {
    int64 id = 1;
}

message Empty {}




